# Delego

./: .env.example  IMPLEMENTATION_CHECKLIST.md  PR_DESCRIPTION.md  commitlint.config.js  package-lock.json  package.json  pnpm-lock.yaml
contracts/permissions/: Cargo.toml
contracts/permissions/src/: integration_tests.rs  lib.rs  test.rs
contracts/permissions/test_snapshots/integration_tests/: test_decrease_allowance_timelock.1.json  test_decrease_allowance_timelock_blocked.1.json  test_grant_and_spend.1.json  test_merchant_restriction.1.json  test_permission_events.1.json  test_permission_expiry.1.json  test_revoke_prevents_spend.1.json  test_spend_exceeds_per_tx_limit.1.json  test_spend_exceeds_total_limit.1.json
contracts/permissions/test_snapshots/test/test/: test_allowance_decreased_event_correct_values.1.json  test_allowance_decreased_event_emitted.1.json  test_double_pause_returns_error.1.json  test_get_allowance_detail_exhausted_clamped_at_zero.1.json  test_get_allowance_detail_fresh.1.json  test_get_allowance_detail_partially_spent.1.json  test_get_remaining_allowance.1.json  test_grant.1.json  test_grant_pause_event_emitted_on_pause.1.json  test_grant_pause_event_emitted_on_unpause.1.json  test_grant_pause_event_not_emitted_on_unauthorized.1.json  test_grant_rejects_invalid_params.1.json  test_grant_with_metadata_stores_and_retrieves_hash.1.json  test_grant_without_metadata_returns_none.1.json  test_merchant_in_whitelist_succeeds.1.json  test_merchant_not_in_whitelist_fails.1.json  test_non_self_delegation_succeeds.1.json  test_pause_blocks_spending.1.json  (+18 more)
(+224 files in other folders)
